fix z-index header

--- a/sprint4-frontend/src/assets/styles/cmps/Calendar.scss
+++ b/sprint4-frontend/src/assets/styles/cmps/Calendar.scss
@@ -17,6 +17,7 @@
     padding: 16px 32px;
     justify-content: space-evenly;
     cursor: auto;
+    z-index: 5;
 
     .calendar-controls {
         width: 100%;
